--- a/css/styles.css
+++ b/css/styles.css
@@ -32,13 +32,14 @@ p {
 .form {
     border: 5px solid black;
     border-radius: 25px;
+    background-color: #fefefe;
     /* border: 2px solid red; */
     width: 60vw;
     display: flex;
     flex-direction: column;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 50px;
+    margin-top: 40px;
     padding-top: 20px;
     padding-left: 20px;
     padding-bottom: 20px;
@@ -66,6 +67,23 @@ input[type="text"]:focus {
     font-size: medium;
 }
 
+.marital {
+    /* border: 2px solid seagreen; */
+    margin-right: 1.25rem;
+}
+
+#married, #unmarried {
+    height: 18px;
+    margin-left: 2px;
+    /* margin-bottom: 5px; */
+    margin-right: 5px;
+    cursor: pointer;
+}
+
+.marital label {
+    margin-right: 25px;
+}
+
 .center {
     margin-left: auto;
     margin-right: auto;
@@ -85,4 +103,12 @@ input[type="text"]:focus {
 .btn:hover {
     background-color: lightslategray;
     color: white;
+}
+
+select {
+    cursor: pointer;
+}
+
+input[type="date"] {
+    cursor:pointer;
 }
